deploy/prod-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: dapp-ui-service
 namespace: dapp-ui
 labels:
   app: dapp-ui
spec:
 type: NodePort
 selector:
   app: dapp-ui
 ports:
 - protocol: TCP
   port: 80
   targetPort: 80
   name: http
