deploy/prod-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dapp-ui-ingress
  namespace: dapp-ui
  annotations:
    networking.gke.io/managed-certificates: dapp-ui-certificate
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: dapp-ui-ingress
    # networking.gke.io/v1beta1.FrontendConfig: dapp-ui-frontend-config
spec:
  rules:
  - host: dapp.propchain.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dapp-ui-service
            port:
              number: 80
